--- a/src/debian/install
+++ b/src/debian/install
@@ -1,3 +1,4 @@
 ma1sd.example.yaml etc/ma1sd
 src/systemd/ma1sd.service etc/systemd/system
 build/libs/ma1sd.jar usr/lib/ma1sd
+src/script/ma1sd usr/lib/ma1sd/
